<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:padding="10dp"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15dp"
            android:textColor="#232425"
            android:fontFamily="@font/arialbd"
            android:layout_weight="1"
            android:text="@string/add_address_title"/>

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:src="@drawable/close"
            android:id="@+id/close"/>

    </LinearLayout>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:fontFamily="@font/arial"
        android:textSize="13dp"
        android:textColor="#232425"
        android:layout_marginTop="10dp"
        android:background="@drawable/auth_input_wrp"
        android:textColorHint="#666"
        android:layout_marginBottom="10dp"
        android:id="@+id/address"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:singleLine="true"
        android:hint="@string/address_hint"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:fontFamily="@font/arial"
        android:textSize="13dp"
        android:textColor="#232425"
        android:background="@drawable/auth_input_wrp"
        android:textColorHint="#666"
        android:layout_marginBottom="10dp"
        android:id="@+id/url"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:singleLine="true"
        android:hint="@string/address_url_hint"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical">

        <CheckBox
            android:layout_width="wrap_content"
            android:minWidth="0dp"
            android:minHeight="0dp"
            android:buttonTint="@color/cb_color"
            android:background="@android:color/transparent"
            android:layout_height="wrap_content"
            android:id="@+id/cb"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/arial"
            android:textSize="14dp"
            android:textColor="#232425"
            android:layout_marginStart="5dp"
            android:text="@string/use_current_location"/>

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/arial"
        android:textSize="12dp"
        android:textColor="#999"
        android:text="@string/use_current_location_info"
        android:textStyle="italic"
        android:layout_marginBottom="10dp"/>

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="match_parent"
        android:layout_height="37dp"
        android:fontFamily="@font/arial"
        android:background="@drawable/standard_btn"
        android:textColor="#fff"
        android:minWidth="0dp"
        android:id="@+id/button"
        android:minHeight="0dp"
        android:textSize="15dp"
        android:text="@string/add_btn"
        android:textAllCaps="false"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_marginTop="10dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/arial"
        android:textColor="#ff0000"
        android:id="@+id/error"
        android:background="@android:color/transparent"
        android:textSize="12dp"
        android:visibility="gone"
        android:gravity="center"/>

    <pl.droidsonroids.gif.GifImageView
        android:layout_width="40dp"
        android:id="@+id/loader"
        android:visibility="gone"
        android:layout_marginTop="10dp"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/loader"
        android:layout_height="40dp"/>

</LinearLayout>