<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ConfirmNumberActivity">

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/arialbd"
            android:gravity="center"
            android:textSize="17dp"
            android:text="@string/confirm_number_title"
            android:textColor="#232425"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/arial"
            android:textColor="#999"
            android:textSize="14dp"
            android:layout_marginBottom="14dp"
            android:gravity="center"
            android:text="@string/enter_confirm_number_lbl"/>

        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:id="@+id/rv"
            android:layout_height="wrap_content"/>

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:fontFamily="@font/arialbd"
            android:visibility="gone"
            android:id="@+id/button"
            android:layout_marginTop="20dp"
            android:textSize="14dp"
            android:background="@drawable/auth_btn"
            android:textColor="#fff"
            android:text="@string/confirm_button"
            android:textAllCaps="false"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_marginTop="10dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/arial"
            android:textColor="#ff0000"
            android:id="@+id/error"
            android:textSize="14dp"
            android:visibility="gone"
            android:gravity="center"/>

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="13dp"
        android:textColor="#369"
        android:id="@+id/go"
        android:fontFamily="@font/arial"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/goto_home"
        android:layout_marginBottom="15dp"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>